--- a/cobranza/templates/cobranza/listar_cobranzas.html
+++ b/cobranza/templates/cobranza/listar_cobranzas.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <title>Lista de Cobranzas</title>
-</head>
-<body>
+{% extends "core/base.html" %}
+
+
+{% block title %}Lista de Cobranzas{% endblock %}
+
+{% block content %}
     <h1>Cobranzas Registradas</h1>
 
     <table border="1">
@@ -31,5 +30,4 @@
         </tr>
         {% endfor %}
     </table>
-</body>
-</html>
+{% endblock %}
