--- a/informes/templates/informes/editar_informe.html
+++ b/informes/templates/informes/editar_informe.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <title>Editar Informe</title>
-</head>
-<body>
+{% extends "core/base.html" %}
+
+
+{% block title %}Editar Informe{% endblock %}
+
+{% block content %}
     <h1>Editar Informe</h1>
 
     <form method="post">
@@ -14,5 +13,4 @@
         <button type="submit">Actualizar</button>
         <a href="{% url 'listar_informes' %}">Volver</a>
     </form>
-</body>
-</html>
+{% endblock %}
