--- a/sesiones/templates/sesiones/crear_sesion.html
+++ b/sesiones/templates/sesiones/crear_sesion.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <title>Agendar Nueva Sesión</title>
-</head>
-<body>
+{% extends "core/base.html" %}
+
+{% block title %}Agendar Nueva Sesión{% endblock %}
+
+{% block content %}
     <h1>Agendar Nueva Sesión</h1>
     <form method="post">
         {% csrf_token %}
@@ -12,5 +10,4 @@
         <button type="submit">Guardar sesión</button>
     </form>
     <a href="{% url 'sesiones_list' %}">Volver a la lista de sesiones</a>
-</body>
-</html>
+{% endblock %}
