--- a/sesiones/templates/sesiones/lista.html
+++ b/sesiones/templates/sesiones/lista.html
@@ -1,4 +1,7 @@
-{% extends "base.html" %}
+{% extends "core/base.html" %}
+
+
+{% block title %}Listado de Sesiones{% endblock %}
 
 {% block content %}
   <h2>Listado de sesiones</h2>
