Sprint 4: pruebas de sistema y ajustes generales de módulos, manteniendo coherencia con la lógica de sprints anteriores.

--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -43,6 +43,9 @@
             <ul>
                 <li><a href="{% url 'home' %}">Inicio</a></li>
                 <li><a href="{% url 'paciente_list' %}">Pacientes</a></li>
+                <li><a href="{% url 'sesiones_list' %}">Sesiones</a></li>
+                <li><a href="{% url 'listar_informes' %}">Informes</a></li>
+                <li><a href="{% url 'listar_cobranzas' %}">Cobranza</a></li>
                 <li><a href="{% url 'logout' %}">Cerrar sesión</a></li>
             </ul>
         </nav>
